# Practica4

./: CMakeLists.txt  entrada.c  estadistica.c  estadistica.h  main.c  salida.c
